--- a/models/recommend/recommend.ipynb
+++ b/models/recommend/recommend.ipynb
@@ -5,27 +5,7 @@
    "execution_count": null,
    "id": "c91b441e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\tndl3\\anaconda3\\envs\\project3\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'models'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mfunctools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m partial\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01moperator\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcollect\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcollect\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ModelCollect\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrecommend\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrecommend\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ModelRecommend\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mqna\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mqna\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ModelQna\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'models'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage\n",
     "from langgraph.checkpoint.memory import MemorySaver\n",
@@ -57,8 +37,6 @@
     "\n",
     "    picture_exist: Optional[str]\n",
     "    \n",
-    "    rag_query: Optional[str]        # Rag 검색에 쓸 쿼리 수이\n",
-    "    rag_result: Optional[str]       # toolnode가 찾아온 rag 결과 수이\n",
     "\n",
     "initial_state = {\n",
     "    \"messages\": []\n",
@@ -98,7 +76,7 @@
     "def node_recommend(state: GraphState, recommender: ModelRecommend):\n",
     "    prev_results = state.get('recommend_result') or []\n",
     "    \n",
-    "    result = recommender.get_response(state[\"messages\"], state[\"collected_data\"], state[\"rag_result\"], prev_results)  # rag_result(rag한 경우), prev_results(있을 경우에만)\n",
+    "    result = recommender.get_response(state[\"messages\"], state[\"collected_data\"], prev_results)  # rag_result(rag한 경우), prev_results(있을 경우에만)\n",
     "    \n",
     "    if result['mode'] == 'before_rag':\n",
     "        return {\n",
@@ -111,7 +89,7 @@
     "        prev_results.append(result)\n",
     "        \n",
     "        ai_msg = result['response']\n",
-    "        messages.append(ai_msg)\n",
+    "        initial_state = {'messages': [HumanMessage(content=user_input)]} # 메세지 추가\n",
     "\n",
     "        return {\n",
     "            \"current_stage\" : \"recommend\",\n",
@@ -366,56 +344,68 @@
     "# 2. (rag 전) get_response(): tool 불러오기 \n",
     "# 3. tool recommend_rag(): 벡터DB에서 검색 후 반환\n",
     "# 4. (rag 후) get_response(): 검색된 데이터를 바탕으로 LLM이 응답 생성\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_core.prompts import PromptTemplate\n",
     "\n",
     "class ModelRecommend:\n",
-    "    def __init__(self, llm: ChatOpenAI):\n",
-    "        self.llm = llm\n",
-    "    \n",
-    "    # rag 검색 쿼리 생성\n",
-    "    def build_rag_query(self, collected_data):\n",
-    "        query = f'{collected_data}에 맞는 식물 추천해줘'   # 나중에 자세하게 수정할 예정\n",
-    "        return query\n",
+    "    def __init__(self, tool):\n",
+    "        self.tool = tool\n",
+    "\n",
     "    \n",
     "    # rag_context를 받아 최종 추천 생성\n",
     "    def build_recommendation(self, collected_data, rag_result, prev_text:Optional[List[str]]):\n",
-    "        prompt = f\"\"\"\n",
-    "        ### 요구사항 ###\n",
-    "        {input_data}\n",
+    "        prompt = PromptTemplate(\n",
+    "            template= \"\"\"\n",
+    "                ### 요구사항 ###\n",
+    "                {collected_data}\n",
     "\n",
-    "        ### RAG 검색 결과(참고) ###\n",
-    "        {rag_result}\n",
+    "                ### RAG 검색 결과(참고) ###\n",
+    "                {rag_result}\n",
     "\n",
-    "        ### 이미 추천한 식물 (다시 추천하지 않습니다) ###\n",
-    "        {prev_text}\n",
+    "                ### 이미 추천한 식물 (다시 추천하지 않습니다) ###\n",
+    "                {prev_text}\n",
     "\n",
-    "        ### 설명 ###\n",
-    "        당신은 친절한 식물 전문가입니다. 한국어로 친절하게 답변하세요.\n",
-    "        RAG 검색 결과를 참고해서 사용자에게 식물 1가지를 추천하세요.\n",
-    "        이미 추천한 식물은 사용자가 거부한 식물이니 추천하지 않습니다.\n",
+    "                ### 설명 ###\n",
+    "                당신은 친절한 식물 전문가입니다. 한국어로 친절하게 답변하세요.\n",
+    "                RAG 검색 결과를 참고해서 사용자에게 식물 1가지를 추천하세요.\n",
+    "                이미 추천한 식물은 사용자가 거부한 식물이니 추천하지 않습니다.\n",
     "\n",
-    "        ### 응답목록 ###\n",
-    "        - 추천하는 식물 이름\n",
-    "        - 추천하는 이유\n",
-    "        - 식물의 꽃말\n",
-    "        - 식물을 키우는 법\n",
-    "        - 식물의 특징\n",
+    "                ### 응답목록 ###\n",
+    "                - 추천하는 식물 이름\n",
+    "                - 추천하는 이유\n",
+    "                - 식물의 꽃말\n",
+    "                - 식물을 키우는 법\n",
+    "                - 식물의 특징\n",
     "\n",
-    "        ### 출력형식 ###\n",
+    "                ### 출력형식 ###\n",
+    "                {{\n",
+    "                    'flowNm': '',\n",
+    "                    'response': ''\n",
+    "                }}\n",
+    "            \"\"\",\n",
+    "            input_variables=['collected_data', 'rag_result', 'prev_text']\n",
+    ")\n",
+    "        \n",
+    "        model = ChatOpenAI(\n",
+    "\t\t    model='gpt-4o-mini',\n",
+    "\t\t    temperature=1\n",
+    "        )\n",
+    "        \n",
+    "        chain = prompt | model\n",
     "\n",
-    "        \"\"\"\n",
-    "\n",
-    "        response = self.llm.invoke(prompt)\n",
+    "        response = chain.invoke({'collected_data': collected_data, 'rag_result': rag_result, 'prev_text': prev_text})\n",
     "        return response\n",
-    "    \n",
-    "    # 입력 - messages: 대화 내역 전체, collected_data: 사용자의 요구 dict, rag_result: rag 결과, prev_results: 이전 추천 내역\n",
+    "\n",
+    "\n",
+    "    # messages[-1]이 toolmessage면 rag result임\n",
+    "    # 입력 - messages: 대화 내역 전체, collected_data: 사용자의 요구 dict, prev_results: 이전 추천 내역(어떤 방식? 이름만?)\n",
     "    # 출력 - response: AI 응답, recommend_result: 추천 결과(다시 추천 X)\n",
-    "    def get_response(self, messages, collected_data, rag_result: Optinoal[str], prev_results: Optional[List[str]]):\n",
+    "    def get_response(self, messages, collected_data, prev_results: Optional[List[str]]):\n",
     "        # rag 전\n",
     "        if rag_result is None:\n",
     "            rag_query = self.build_rag_query(collected_data)\n",
     "\n",
     "            return {\n",
-    "                'mode': 'before_rag',\n",
     "                'rag_query': rag_query,\n",
     "                'response': None,\n",
     "                'recommend_result': None,\n",
@@ -426,7 +416,6 @@
     "            response = self.build_recommendation(collected_data, rag_result, prev_results)\n",
     "\n",
     "            return {\n",
-    "                'mode': 'after_rag',\n",
     "                'response': response,\n",
     "                'recommend_result': \"식물이름만\", # 식물 이름만\n",
     "            }"
