feat: 전체 2차 구현

--- a/models/recommend/preprocess_practice.ipynb
+++ b/models/recommend/preprocess_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "id": "7ba63b4c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "id": "b08e6058",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "id": "79f3328f",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "id": "b35e66c2",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "id": "d687b7dd",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
        " '월귤']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "id": "a05e2380",
    "metadata": {},
    "outputs": [],
@@ -507,31 +507,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "id": "94870aee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_datas = ['튤립', '사과나무']"
+    "input_datas = ['물푸레나무', '하늘나리']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "id": "8ff68aba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Playdata\\AppData\\Local\\anaconda3\\envs\\project3\\lib\\site-packages\\pydantic\\v1\\main.py:1054: UserWarning: LangSmith now uses UUID v7 for run and trace identifiers. This warning appears when passing custom IDs. Please use: from langsmith import uuid7\n",
-      "            id = uuid7()\n",
-      "Future versions will require UUID v7.\n",
-      "  input_data = validator(cls_, input_data)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "completed_list = []\n",
     "\n",
@@ -550,26 +539,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "id": "8edb70f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'flowNm': '튤립',\n",
-       "  'desc': '튤립은 다채로운 색상과 우아한 형태를 가진 꽃으로, 햇빛을 좋아하며 물빠짐이 좋은 토양에서 잘 자랍니다.',\n",
+       "[{'flowNm': '물푸레나무',\n",
+       "  'desc': '물푸레나무는 튼튼한 줄기와 반짝이는 잎이 특징이며, 적절한 햇볕과 물을 주면 잘 자랍니다.',\n",
        "  'difficulty': '쉬움',\n",
-       "  'interior': '튤립을 화분에 심어 거실 창가에 두거나, 식탁 중앙에 화려한 꽃다발로 배열하여 공간을 밝힙니다.',\n",
-       "  'style': '모던'},\n",
-       " {'flowNm': '사과나무',\n",
-       "  'desc': '사과나무는 아름다운 꽃과 과일을 탐스럽게 맺으며, 햇볕과 물을 적절히 주면 잘 자랍니다.',\n",
-       "  'difficulty': '보통',\n",
-       "  'interior': '사과나무를 실내 또는 정원에 배치해 자연스러운 아늑한 느낌을 주며, 화분을 활용해 레이어드 배치 가능합니다.',\n",
-       "  'style': '내추럴 인테리어'}]"
+       "  'interior': '물푸레나무를 거실 한쪽 구석에 배치하여 자연의 느낌을 살리며, 밝은 조명 아래에서 더욱 돋보이게 할 수 있습니다.',\n",
+       "  'style': '내추럴 인테리어'},\n",
+       " {'flowNm': '하늘나리',\n",
+       "  'desc': '하늘나리는 아름다운 파란색 꽃을 가진 식물로, 햇빛과 습기를 좋아하며 잘 드리는 관리가 필요합니다.',\n",
+       "  'difficulty': '쉬움',\n",
+       "  'interior': '하늘나리를 화분으로 심어 창가나 식탁 위에 배치하면 공간에 생동감을 더할 수 있습니다.',\n",
+       "  'style': '내츄럴'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 73,
    "id": "ac8de68f",
    "metadata": {},
    "outputs": [],
@@ -602,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "id": "01cd0137",
    "metadata": {},
    "outputs": [],
@@ -620,19 +609,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "id": "1204dfeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_name = 'plants'\n",
-    "\n",
-    "pc.delete_index(index_name)"
+    "index_name='plant-recommend'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "id": "c3bb30b7",
    "metadata": {},
    "outputs": [],
@@ -651,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 89,
    "id": "1c8083ee",
    "metadata": {},
    "outputs": [],
@@ -663,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "id": "62e80072",
    "metadata": {},
    "outputs": [],
@@ -692,32 +679,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "id": "379c45a9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Playdata\\AppData\\Local\\anaconda3\\envs\\project3\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
     "embedding_model = OpenAIEmbeddings(model='text-embedding-3-small')\n",
     "embeddings = embedding_model.embed_documents(texts)\n",
     "\n",
-    "idx = pc.Index(index_name)\n",
+    "index = pc.Index(index_name)\n",
     "\n",
     "for i, row in df.iterrows():\n",
     "    metadatas = row.drop(['fSctNm', 'fEngNm', 'fileName1', 'fileName2', 'fileName3', 'publishOrg', 'colors', 'text_to_embed']).to_dict()\n",
     "    metadatas[\"text\"] = row[\"text_to_embed\"]\n",
     "\n",
-    "    idx.upsert([\n",
+    "    index.upsert([\n",
     "        (\n",
     "            str(row['dataNo']),\n",
     "            embeddings[i],\n",
@@ -728,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "id": "def19860",
    "metadata": {},
    "outputs": [],
@@ -762,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 82,
    "id": "5f32947e",
    "metadata": {},
    "outputs": [],
@@ -774,7 +752,7 @@
     "    embedding=embedding_model,\n",
     ")\n",
     "\n",
-    "retriever = vector_store.as_retriever(search_kwargs={\"k\": 3})\n",
+    "retriever = vector_store.as_retriever(search_kwargs={\"k\": 1})\n",
     "\n",
     "query_text = str(collected_data)\n",
     "\n",
@@ -783,19 +761,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "id": "49aeee10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(id='343', metadata={'dataNo': 343.0, 'fContent': '꽃모양도 다양하고 꽃색도 여러가지다. 꽃도 홓꽃과 겹꽃이 있으며 겨울철 분화용으로 좋은 식물이다. 개화기간도 길고 화분이 작아 청소년들 선물용으로도 좋은 아이템이다.', 'fDay': 8.0, 'fGrow': '5도 이상이면 무난히 월동하므로 겨울철 야간에 무가온 사무실 같은 곳에서도 잘 자란다. 다육성 식물이지만 물도 좋아하며 번식은 엽삽이나 포기나누기로 잘 증식된다.', 'fMonth': 12.0, 'fType': \"돌나물과에 속하는 온실 관화식물이다. 꽃색이 다양한 품종들이 개발되어 있으며 꽃이 초롱같은 '앤디'라는 품종도 흔히 판매된다.\", 'fUse': '다육성 분화라서 건조에도 강하므로 실내에서도 잘 견딘다. 광이 부족하면 웃자라기 때문에 볕이 잘 드는 베란다나 창가 등에 둔다.', 'flowLang': '인기, 설레임', 'flowNm': '칼랑코에', 'imgUrl1': 'https://www.nihhs.go.kr/Attfiles/FLOWF/1208-1.jpg', 'imgUrl2': 'https://www.nihhs.go.kr/Attfiles/FLOWF/1208-2.jpg', 'imgUrl3': 'https://www.nihhs.go.kr/Attfiles/FLOWF/1208-3.jpg', 'isAirCond': True, 'isToxicToCat': False, 'isToxicToDog': False}, page_content=\"꽃 이름: 칼랑코에, 꽃말: 인기, 설레임, 특징: 꽃모양도 다양하고 꽃색도 여러가지다. 꽃도 홓꽃과 겹꽃이 있으며 겨울철 분화용으로 좋은 식물이다. 개화기간도 길고 화분이 작아 청소년들 선물용으로도 좋은 아이템이다., 용도: 다육성 분화라서 건조에도 강하므로 실내에서도 잘 견딘다. 광이 부족하면 웃자라기 때문에 볕이 잘 드는 베란다나 창가 등에 둔다., 재배법: 5도 이상이면 무난히 월동하므로 겨울철 야간에 무가온 사무실 같은 곳에서도 잘 자란다. 다육성 식물이지만 물도 좋아하며 번식은 엽삽이나 포기나누기로 잘 증식된다., 종류: 돌나물과에 속하는 온실 관화식물이다. 꽃색이 다양한 품종들이 개발되어 있으며 꽃이 초롱같은 '앤디'라는 품종도 흔히 판매된다.. 공기정화식물이다.\"),\n",
-       " Document(id='132', metadata={'dataNo': 132.0, 'fContent': '하늘에 흘러가는 구름을 닮고픈 걸까, 이글거리는 태양을 닮고픈 걸까. 여러 자생 나리들 중에서 진짜 나리는 나야! 라고 소리치는 듯 하다. 당당하게 하늘을 우러러 보는 모습이 때 묻지 않은 산골소녀의 해맑은 모습을 보는 것 같기도 하다.', 'fDay': 11.0, 'fGrow': '여름철 고온다습한 환경에 약하므로 배수가 잘되는 곳에 심는다. 가장 널리 이용하는 방법이 인편번식으로 깨끗한 삽목상에 심는다. 종자번식도 잘되는데 씨앗을 뿌리면 3년은 지나야 꽃이 핀다. 나리류 중에서 참나리만 주아(꽃대의 잎겨드랑이에 검은색 열매처럼 보이는)가 달리는데 이 주아를 뿌린다.', 'fMonth': 5.0, 'fType': '백합과의 여러해살이 풀이다. 깊은 산 햇빛이 잘 드는 곳에서 자라며 긴 선형의 잎이 어긋나게 달린다. 짙은 주홍빛에 자주색반점이 있는 꽃이 하늘을 향해 핀다.', 'fUse': '꽃이 화려한데다 크고 색상이 강렬하여 눈에 잘 뜨인다. 정원의 경계부나 화단의 포인트가 될 부분에 모아심기 해 두면 참 잘 어울린다. 가정에 심어두고 한창 개화기 때 꽃을 잘라 꽃꽂이용으로 이용해도 좋다.', 'flowLang': '길들여지지 않음, 변치 않는 귀여움', 'flowNm': '하늘나리', 'imgUrl1': 'https://www.nihhs.go.kr/Attfiles/FLOWF/0511-3.jpg', 'imgUrl2': 'https://www.nihhs.go.kr/Attfiles/FLOWF/0511-2.jpg', 'imgUrl3': 'https://www.nihhs.go.kr/Attfiles/FLOWF/0511-1.jpg', 'isAirCond': False, 'isToxicToCat': False, 'isToxicToDog': False}, page_content='꽃 이름: 하늘나리, 꽃말: 길들여지지 않음, 변치 않는 귀여움, 특징: 하늘에 흘러가는 구름을 닮고픈 걸까, 이글거리는 태양을 닮고픈 걸까. 여러 자생 나리들 중에서 진짜 나리는 나야! 라고 소리치는 듯 하다. 당당하게 하늘을 우러러 보는 모습이 때 묻지 않은 산골소녀의 해맑은 모습을 보는 것 같기도 하다., 용도: 꽃이 화려한데다 크고 색상이 강렬하여 눈에 잘 뜨인다. 정원의 경계부나 화단의 포인트가 될 부분에 모아심기 해 두면 참 잘 어울린다. 가정에 심어두고 한창 개화기 때 꽃을 잘라 꽃꽂이용으로 이용해도 좋다., 재배법: 여름철 고온다습한 환경에 약하므로 배수가 잘되는 곳에 심는다. 가장 널리 이용하는 방법이 인편번식으로 깨끗한 삽목상에 심는다. 종자번식도 잘되는데 씨앗을 뿌리면 3년은 지나야 꽃이 핀다. 나리류 중에서 참나리만 주아(꽃대의 잎겨드랑이에 검은색 열매처럼 보이는)가 달리는데 이 주아를 뿌린다., 종류: 백합과의 여러해살이 풀이다. 깊은 산 햇빛이 잘 드는 곳에서 자라며 긴 선형의 잎이 어긋나게 달린다. 짙은 주홍빛에 자주색반점이 있는 꽃이 하늘을 향해 핀다..'),\n",
-       " Document(id='33', metadata={'dataNo': 33.0, 'fContent': '지금도 이른 봄이면 찬바람 나는 들판에서 나물 캐는 아낙네들을 볼 수 있다. 냉이는 꽃이 피기 전에 먹어야하니 2월이 제철이기 때문이다. 싱싱한 냉이 잎과 뿌리를 생각하면 벌써부터 그 향내가 코끝을 맴도는 것 같다. 꽃말처럼 냉이는 잎부터 뿌리까지 버릴 게 없다.', 'fDay': 2.0, 'fGrow': '추위에도 강하고 특별한 관리없이 산이나 들, 밭 어디서나 잘 자란다. 대량으로 재배할 경우에는 흰 꽃이 지고 난 뒤 6-7월경 그 자리에서 맺는 씨앗꼬투리(그 안에 약 20-40개의 씨앗이 들어있음)를 따서 바로 뿌리면 된다.', 'fMonth': 2.0, 'fType': '십자화과에 속하는 일년초이다. 전국에서 흔히 야생하며 밭에서는 쓸모없는 풀로 취급받기도 한다. 영명은 열매모양이 쌈지같이 생겼다 하여 붙여진 이름이다.', 'fUse': '냉이만큼 생존력이 강한 것도 드물 것이다. 우리나라 전역의 밭이나 야산에 흔히 나는 대표적인 봄나물이다. 어린잎과 뿌리를 나물로 무쳐먹거나 국으로 끓여먹는다.', 'flowLang': '나의 모든 것을 바칩니다.', 'flowNm': '냉이', 'imgUrl1': 'https://www.nihhs.go.kr/Attfiles/FLOWF/0202-1.jpg', 'imgUrl2': 'https://www.nihhs.go.kr/Attfiles/FLOWF/0202-2.jpg', 'imgUrl3': 'https://www.nihhs.go.kr/Attfiles/FLOWF/0202-3.jpg', 'isAirCond': False, 'isToxicToCat': False, 'isToxicToDog': False}, page_content='꽃 이름: 냉이, 꽃말: 나의 모든 것을 바칩니다., 특징: 지금도 이른 봄이면 찬바람 나는 들판에서 나물 캐는 아낙네들을 볼 수 있다. 냉이는 꽃이 피기 전에 먹어야하니 2월이 제철이기 때문이다. 싱싱한 냉이 잎과 뿌리를 생각하면 벌써부터 그 향내가 코끝을 맴도는 것 같다. 꽃말처럼 냉이는 잎부터 뿌리까지 버릴 게 없다., 용도: 냉이만큼 생존력이 강한 것도 드물 것이다. 우리나라 전역의 밭이나 야산에 흔히 나는 대표적인 봄나물이다. 어린잎과 뿌리를 나물로 무쳐먹거나 국으로 끓여먹는다., 재배법: 추위에도 강하고 특별한 관리없이 산이나 들, 밭 어디서나 잘 자란다. 대량으로 재배할 경우에는 흰 꽃이 지고 난 뒤 6-7월경 그 자리에서 맺는 씨앗꼬투리(그 안에 약 20-40개의 씨앗이 들어있음)를 따서 바로 뿌리면 된다., 종류: 십자화과에 속하는 일년초이다. 전국에서 흔히 야생하며 밭에서는 쓸모없는 풀로 취급받기도 한다. 영명은 열매모양이 쌈지같이 생겼다 하여 붙여진 이름이다..')]"
+       "[Document(id='343', metadata={'dataNo': 343.0, 'fContent': '꽃모양도 다양하고 꽃색도 여러가지다. 꽃도 홓꽃과 겹꽃이 있으며 겨울철 분화용으로 좋은 식물이다. 개화기간도 길고 화분이 작아 청소년들 선물용으로도 좋은 아이템이다.', 'fDay': 8.0, 'fGrow': '5도 이상이면 무난히 월동하므로 겨울철 야간에 무가온 사무실 같은 곳에서도 잘 자란다. 다육성 식물이지만 물도 좋아하며 번식은 엽삽이나 포기나누기로 잘 증식된다.', 'fMonth': 12.0, 'fType': \"돌나물과에 속하는 온실 관화식물이다. 꽃색이 다양한 품종들이 개발되어 있으며 꽃이 초롱같은 '앤디'라는 품종도 흔히 판매된다.\", 'fUse': '다육성 분화라서 건조에도 강하므로 실내에서도 잘 견딘다. 광이 부족하면 웃자라기 때문에 볕이 잘 드는 베란다나 창가 등에 둔다.', 'flowLang': '인기, 설레임', 'flowNm': '칼랑코에', 'imgUrl1': 'https://www.nihhs.go.kr/Attfiles/FLOWF/1208-1.jpg', 'imgUrl2': 'https://www.nihhs.go.kr/Attfiles/FLOWF/1208-2.jpg', 'imgUrl3': 'https://www.nihhs.go.kr/Attfiles/FLOWF/1208-3.jpg', 'isAirCond': True, 'isToxicToCat': False, 'isToxicToDog': False}, page_content=\"꽃 이름: 칼랑코에, 꽃말: 인기, 설레임, 특징: 꽃모양도 다양하고 꽃색도 여러가지다. 꽃도 홓꽃과 겹꽃이 있으며 겨울철 분화용으로 좋은 식물이다. 개화기간도 길고 화분이 작아 청소년들 선물용으로도 좋은 아이템이다., 용도: 다육성 분화라서 건조에도 강하므로 실내에서도 잘 견딘다. 광이 부족하면 웃자라기 때문에 볕이 잘 드는 베란다나 창가 등에 둔다., 재배법: 5도 이상이면 무난히 월동하므로 겨울철 야간에 무가온 사무실 같은 곳에서도 잘 자란다. 다육성 식물이지만 물도 좋아하며 번식은 엽삽이나 포기나누기로 잘 증식된다., 종류: 돌나물과에 속하는 온실 관화식물이다. 꽃색이 다양한 품종들이 개발되어 있으며 꽃이 초롱같은 '앤디'라는 품종도 흔히 판매된다.. 공기정화식물이다.\")]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 85,
    "id": "01a9cd62",
    "metadata": {},
    "outputs": [],
@@ -866,68 +842,59 @@
     "    raw = chain.invoke({'collected_data': collected_data, 'rag_result': rag_result, 'prev_text': prev_text})\n",
     "    response = json.loads(raw.content)\n",
     "    \n",
-    "    return response"
+    "    return response, raw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "27d0fd26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collected_data = {\n",
-    "    \"purpose\": \"거실 / 거실의 빈 벽이 너무 심심해서 놓고 싶어\",\n",
-    "    \"preferred_style\": \"미니멀\",\n",
-    "    \"preferred_color\": \"#A1B07C\",\n",
-    "    \"plant_type\": '난',\n",
-    "    \"season\": \"여름\",\n",
-    "    \"humidity\": \"건조\",\n",
-    "    \"has_dog\": True,\n",
-    "    \"has_cat\": False,\n",
-    "    \"isAirCond\": True,\n",
-    "    \"watering_frequency\": \"주1회 가능\",\n",
-    "    \"user_experience\": \"초보\",\n",
-    "    \"emotion\": \"위로\",\n",
-    "    \"description\":\"설명~\",\n",
-    "}\n",
-    "\n",
-    "prev_text = ['튤립', '사랑초']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 86,
    "id": "4057cd70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = build_recommendation(collected_data, retrievals, prev_text)"
+    "res, raw = build_recommendation(collected_data, retrievals, prev_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "id": "798d40a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'flowNm': '칼랑코에',\n",
-       " 'response': '칼랑코에는 미니멀한 스타일의 인테리어에 잘 어울리는 다육성 식물입니다. 건조한 환경에서도 잘 자라며, 주1회의 물 주기로 관리하실 수 있습니다. 이 식물은 꽃모양과 색상이 다양해 거실의 빈 벽을 화사하게 꾸며줄 것입니다.',\n",
-       " 'flowerLanguage': '인기, 설레임',\n",
-       " 'careInstructions': '칼랑코에는 햇빛을 좋아하지만 너무 강한 직사광선은 피해야 합니다. 배수가 잘 되는 화분에 심고, 주1회 물을 주시되 흙이 완전히 마른 후에 물을 주는 것이 좋습니다.',\n",
-       " 'features': '다양한 꽃 모양과 색상이 있으며, 개화기간이 길고 다육성이어서 생존력이 뛰어납니다. 또한, 실내에서도 잘 자라는 특성을 가지고 있어 초보자에게 적합합니다.'}"
+       "'칼랑코에'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res"
+    "res['flowNm']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "ea335a9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='{\\n    \"flowNm\": \"칼랑코에\",\\n    \"response\": \"칼랑코에는 다육식물로, 건조한 환경에서도 잘 자랍니다. 따라서 여러분의 거실에서 편안하게 기를 수 있을 것입니다. 실내에서 잘 자라며, 꽃의 색상과 모양도 다양해 인테리어에 포인트를 줄 수 있습니다. 또한, 궂은 날씨나 건조한 환경에서도 잘 적응하는 특성이 있어 관리하기 쉽습니다. 식물의 꽃말은 \\'인기\\'와 \\'설레임\\'으로, 위로감과 기분 전환에 도움이 될 것입니다. 칼랑코에는 햇빛을 좋아하지만, 너무 강한 직사광선은 피해야 합니다. 주 1회 물주는 것으로 충분하며, 통기성이 좋은 흙에서 잘 자랍니다.\"\\n}', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 184, 'prompt_tokens': 936, 'total_tokens': 1120, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_51db84afab', 'id': 'chatcmpl-CdwiFJr5o8pCg0AtLppLe7POs3C83', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--21d05dc7-8085-4aec-a6bc-d7d70c59721e-0', usage_metadata={'input_tokens': 936, 'output_tokens': 184, 'total_tokens': 1120, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw"
    ]
   }
  ],
