--- a/models/recommend/recommend.ipynb
+++ b/models/recommend/recommend.ipynb
@@ -21,6 +21,9 @@
     "from models.recommend.recommend import ModelRecommend\n",
     "from models.qna.qna import ModelQna\n",
     "\n",
+    "from langchain_pinecone import PineconeVectorStore\n",
+    "\n",
+    "\n",
     "# 정보 저장 state 선언 --------------------\n",
     "\n",
     "class GraphState(TypedDict):\n",
@@ -50,6 +53,7 @@
     "    # RAG 수행\n",
     "    return string \n",
     "\"\"\"\n",
+    "\n",
     "# tools 에는, 각각 이미지 처리 혹은 RAG를 수행하는 세가지 함수가 들어가야 함\n",
     "tools = []\n",
     "\n",
@@ -74,35 +78,12 @@
     "        }\n",
     "\n",
     "def node_recommend(state: GraphState, recommender: ModelRecommend):\n",
-    "    prev_results = state.get('recommend_result') or []\n",
-    "    \n",
-    "    result = recommender.get_response(state[\"messages\"], state[\"collected_data\"], prev_results)  # rag_result(rag한 경우), prev_results(있을 경우에만)\n",
-    "    \n",
-    "    if result['mode'] == 'before_rag':\n",
-    "        return {\n",
-    "            \"current_stage\" : \"recommend\",\n",
-    "            \"messages\": [response],\n",
-    "            \"recommend_result\": [recommend_result],\n",
-    "        }\n",
-    "    else:\n",
-    "        result = result['recommend_result']\n",
-    "        prev_results.append(result)\n",
-    "        \n",
-    "        ai_msg = result['response']\n",
-    "        initial_state = {'messages': [HumanMessage(content=user_input)]} # 메세지 추가\n",
-    "\n",
-    "        return {\n",
-    "            \"current_stage\" : \"recommend\",\n",
-    "            \"messages\": result['response'],\n",
-    "            \"recommend_result\": prev_results,\n",
-    "        }\n",
-    "   \n",
+    "    response, recommend_result = recommender.get_response(state[\"messages\"], state[\"collected_data\"], state['recommend_result'])  \n",
     "    \n",
     "    # collected_data (정보를 저장한 딕셔너리) 도 같이 전달해주는 것이 낫지 않을지...   -> 어디에 전달하는 걸까요?\n",
     "    # 사용자에게 보여줘야할 값 : response와, 추천 결과: recommend_result를 같이 반환해줘야 할듯 (추천 결과는 다시 추천 받을때 제외하기 위함)\n",
     "    # collected_data: dict         # 사용자에게서 모은 데이터(정보)를 저장하는 딕셔너리\n",
     "    # recommend_result: List[str]  # 사용자에게 추천한 결과(해당 추천 결과는 재추천할때에 고려하지 않게 하기 위함)\n",
-    "\n",
     "    return {\n",
     "        \"current_stage\" : \"recommend\",\n",
     "        \"messages\": [response],\n",
@@ -289,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "74aa9a4d",
    "metadata": {},
    "outputs": [
@@ -304,9 +285,7 @@
    ],
    "source": [
     "import json\n",
-    "from typing import Dict, List, Optional, Tuple\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.messages import AIMessage"
+    "from typing import List, Optional"
    ]
   },
   {
@@ -341,84 +320,102 @@
    "outputs": [],
    "source": [
     "# 1. node_recommend()\n",
-    "# 2. (rag 전) get_response(): tool 불러오기 \n",
+    "# 2. (rag 전) get_response(): tool 호출 \n",
     "# 3. tool recommend_rag(): 벡터DB에서 검색 후 반환\n",
     "# 4. (rag 후) get_response(): 검색된 데이터를 바탕으로 LLM이 응답 생성\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.messages import SystemMessage\n",
     "\n",
     "class ModelRecommend:\n",
-    "    def __init__(self, tool):\n",
-    "        self.tool = tool\n",
+    "    def __init__(self, tools):\n",
+    "        self.tools = tools\n",
     "\n",
-    "    \n",
-    "    # rag_context를 받아 최종 추천 생성\n",
-    "    def build_recommendation(self, collected_data, rag_result, prev_text:Optional[List[str]]):\n",
-    "        prompt = PromptTemplate(\n",
-    "            template= \"\"\"\n",
-    "                ### 요구사항 ###\n",
-    "                {collected_data}\n",
+    "    def get_response(self, messages, collected_data, prev_results: Optional[List[str]]):        \n",
+    "        prompt= f\"\"\"\n",
+    "            ### 요구사항 ###\n",
+    "            {collected_data}\n",
     "\n",
-    "                ### RAG 검색 결과(참고) ###\n",
-    "                {rag_result}\n",
+    "            ### 이미 추천한 식물 (다시 추천하지 않습니다) ###\n",
+    "            {prev_results}\n",
     "\n",
-    "                ### 이미 추천한 식물 (다시 추천하지 않습니다) ###\n",
-    "                {prev_text}\n",
+    "            ### 설명 ###\n",
+    "            당신은 친절한 식물 전문가입니다. 한국어로 친절하게 답변하세요.\n",
+    "            RAG 검색 결과를 참고해서 사용자에게 식물 1가지를 추천하세요.\n",
+    "            이미 추천한 식물은 사용자가 거부한 식물이니 추천하지 않습니다.\n",
     "\n",
-    "                ### 설명 ###\n",
-    "                당신은 친절한 식물 전문가입니다. 한국어로 친절하게 답변하세요.\n",
-    "                RAG 검색 결과를 참고해서 사용자에게 식물 1가지를 추천하세요.\n",
-    "                이미 추천한 식물은 사용자가 거부한 식물이니 추천하지 않습니다.\n",
+    "            ### 응답목록 ###\n",
+    "            - 추천하는 식물 이름\n",
+    "            - 추천하는 이유\n",
+    "            - 식물의 꽃말\n",
+    "            - 식물을 키우는 법\n",
+    "            - 식물의 특징\n",
     "\n",
-    "                ### 응답목록 ###\n",
-    "                - 추천하는 식물 이름\n",
-    "                - 추천하는 이유\n",
-    "                - 식물의 꽃말\n",
-    "                - 식물을 키우는 법\n",
-    "                - 식물의 특징\n",
-    "\n",
-    "                ### 출력형식 ###\n",
-    "                {{\n",
-    "                    'flowNm': '',\n",
-    "                    'response': ''\n",
-    "                }}\n",
-    "            \"\"\",\n",
-    "            input_variables=['collected_data', 'rag_result', 'prev_text']\n",
-    ")\n",
+    "            ### 출력형식 ###\n",
+    "            {{\n",
+    "                \"flowNm\": \"\",\n",
+    "                \"response\": \"\"\n",
+    "            }}\n",
+    "        \"\"\"\n",
     "        \n",
+    "        system_msg = SystemMessage(prompt)\n",
+    "        input_msg = [system_msg] + messages\n",
+    "            \n",
     "        model = ChatOpenAI(\n",
-    "\t\t    model='gpt-4o-mini',\n",
-    "\t\t    temperature=1\n",
-    "        )\n",
-    "        \n",
-    "        chain = prompt | model\n",
+    "            model='gpt-4o-mini',\n",
+    "            temperature=1\n",
+    "        ).bind_tools(self.tools)\n",
+    "            \n",
+    "        response = model.invoke(input_msg)\n",
+    "        recommend_result = \"\"\n",
+    "        if response.content != '':\n",
+    "            res_json = json.loads(response.content)\n",
+    "            recommend_result = res_json['flowNm']\n",
+    "            \n",
+    "        return response, recommend_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abc1d4bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def tool_rag_qna(query: str) -> str:\n",
+    "    \"\"\"식물 상담 QnA 전용 RAG 도구\"\"\"\n",
+    "    \n",
+    "    #----- 전역에서 한번만 바꿔야 할듯한\n",
     "\n",
-    "        response = chain.invoke({'collected_data': collected_data, 'rag_result': rag_result, 'prev_text': prev_text})\n",
-    "        return response\n",
+    "    ##-----\n",
+    "\n",
+    "    docs = retriever.invoke(query) # retriever(query)\n",
+    "    return \"\\n\\n\".join([d.page_content for d in docs])\n",
     "\n",
     "\n",
-    "    # messages[-1]이 toolmessage면 rag result임\n",
-    "    # 입력 - messages: 대화 내역 전체, collected_data: 사용자의 요구 dict, prev_results: 이전 추천 내역(어떤 방식? 이름만?)\n",
-    "    # 출력 - response: AI 응답, recommend_result: 추천 결과(다시 추천 X)\n",
-    "    def get_response(self, messages, collected_data, prev_results: Optional[List[str]]):\n",
-    "        # rag 전\n",
-    "        if rag_result is None:\n",
-    "            rag_query = self.build_rag_query(collected_data)\n",
-    "\n",
-    "            return {\n",
-    "                'rag_query': rag_query,\n",
-    "                'response': None,\n",
-    "                'recommend_result': None,\n",
-    "            }\n",
-    "        \n",
-    "        # rag 후\n",
-    "        else:\n",
-    "            response = self.build_recommendation(collected_data, rag_result, prev_results)\n",
-    "\n",
-    "            return {\n",
-    "                'response': response,\n",
-    "                'recommend_result': \"식물이름만\", # 식물 이름만\n",
-    "            }"
+    "tools = [tool_rag_qna]\n",
+    "llm_with_tools = llm.bind_tools(tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7371352f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def tool_rag_recommend(query: str) -> str:\n",
+    "    \"\"\"식물 추천 전용 RAG 도구\"\"\"\n",
+    "    vector_store = PineconeVectorStore(\n",
+    "        index=index, \n",
+    "        embedding=OpenAIEmbeddings(model=\"text-embedding-3-small\")\n",
+    "    )\n",
+    "    \n",
+    "    retriever = vector_store.as_retriever(search_kwargs={\"k\": 1})\n",
+    "    retrievals = retriever.batch([query])\n",
+    "    \n",
+    "    return str(retrievals[0])"
    ]
   }
  ],
